# Pseudo-kiosk

./: CMakeLists.txt  README.md  save.sh
header/: kiosk.h  launcher.h  pong_kiosk.h
src/: kiosk.c  launcher.c  pong_kiosk.c
